syntax = "proto3";
package user;
option go_package = "github.com/lahaehae/crud_project/user_protos";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
    rpc GetUser (GetUserRequest) returns (UserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (UserResponse);
}

message CreateUserRequest{
    string name = 1;
    string email = 2;
}

message GetUserRequest{
    int32 id = 1;
}

message UpdateUserRequest{
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message DeleteUserRequest{
    int32 id = 1;
}

message UserResponse{
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message Empty{}
